# OpenGL

./: CMakeLists.txt  README.md  build_log.txt  build_log_verbose.txt  terminal  test_output.txt
.cache/clangd/index/: Background.cpp.81B2594206DC7107.idx  Background.h.F10FF60473D67201.idx  FontManager.cpp.5CBF58174259C037.idx  FontManager.h.1E6095F2A279C39D.idx  PTYHandler.cpp.99C3209DDEE59813.idx  PTYHandler.h.EEEE91921D56FBCB.idx  Renderer.cpp.0AE3FFC9001ACC9E.idx  Renderer.h.EA33FB84F85EF345.idx  Shader.h.1401ED21726DCDDE.idx  Terminal.cpp.7670B5E3E5E2554D.idx  Terminal.h.6C6C38C6B957CC90.idx  config.h.C05796B6D8891EAA.idx  glad.c.EC7111DCC616F80E.idx  glad.h.28AED42BBC2DA89A.idx  glfw3.h.5C21A0BEE942333D.idx  khrplatform.h.DF5BA8A6CBCAEDD7.idx  main.cpp.85D3BC049EEEFD06.idx  stb_image.h.6B4209005F0A3199.idx
dependencies/glad/: glad.h
src/: Background.cpp  Background.h  FontManager.cpp  FontManager.h  PTYHandler.cpp  PTYHandler.h  Renderer.cpp  Renderer.h  Shader.h  Terminal.cpp  Terminal.h  config.h  glad.c  main.cpp
tests/: pty_test  test_pty.cpp
